--- a/Create_jack-Portfolio/index.html
+++ b/Create_jack-Portfolio/index.html
@@ -41,7 +41,7 @@
             <a href="#">Home</a>
             <a href="#section-about">My Skills</a>
             <a href="#section-work">Work</a>
-            <a href="#section-blog">Blog</a>
+            <!-- <a href="#section-blog">Blog</a> -->
             <a href="#contact-section">Contact</a>
         </nav>
         <ul class="social-icons">
@@ -101,11 +101,11 @@
             <p>A small gallery of projects created by me.
                 I've done them all together with amazing people fro  github, stackoverflow, youtube and other coding sites.
                 This is only a tiny spec of other projects I will be creating.
-                <br>
-                Interested to see some more? Visit <a href="#" class="me">my work</a> page
+                <!-- <br>
+                Interested to see some more? Visit <a href="#" class="me">my work</a> page -->
             </p>
         </div>
-        <a href="#" class="contact-button">
+        <!-- <a href="#" class="contact-button">
             <div>
                 <span class="bg"></span>
                 <span class="base"></span>
@@ -113,7 +113,7 @@
                     See More!
                 </span>
             </div>
-        </a>
+        </a> -->
     </div>
     <div class="fake-big-2">work</div>
    </section>
@@ -143,9 +143,9 @@
         </li>
         <li>
             <div class="magic-wall_item lazyload">
-                <img src="istockphoto-1317820316-612x612.jpg" alt="image">
+                <img src="pharmacy/logo.png" alt="image">
                 <div class="hovercontent"></div>
-                <a href="#" class="colorbox"></a>
+                <a href="pharmacy/pharmacy.html" target="_blank" class="colorbox"></a>
             </div>
         </li>
         <li>
@@ -236,7 +236,7 @@
         </div>
     </div>
 </section>
-<section id="section-blog" class="section-blog">
+<!-- <section id="section-blog" class="section-blog">
 <div class="fake-big-2">Blog</div>
 <div class="blog-articles">
 
@@ -359,7 +359,7 @@
 </article>
 
 </div>
-</section>
+</section> -->
 
 <section id="contact-section">
 <div class="contact-section contact-wrapper">
@@ -375,7 +375,7 @@
         </div>
             <div class="form-input-wrapper">
                 <div class="form-input-group">
-                    <input type="text" placeholder="Name" name="name">
+                    <input type="text" placeholder="Name" name="name" class="name">
                     <span></span>
                 </div>
                 <div class="form-input-group">
